@@ -515,7 +515,7 @@ sub create
 
     # Verify user exists
     my $userExists = $usersMod->userExists($args{uid});
-    if ($userExists == EBox::Users::OBJECT_EXISTS_AND_HIDDEN_SID()) {
+    if ($userExists and ($userExists == EBox::Users::OBJECT_EXISTS_AND_HIDDEN_SID())) {
         throw EBox::Exceptions::External(__x('The user {uid} already exists as built-in Windows user', uid => $args{uid}));
     } elsif ($userExists) {
         throw EBox::Exceptions::DataExists('data' => __('user name'),
@@ -523,7 +523,7 @@ sub create
     }
     # Verify that a group with the same name does not exists
     my $groupExists =  $usersMod->groupExists($args{uid});
-    if ($groupExists == EBox::Users::OBJECT_EXISTS_AND_HIDDEN_SID()) {
+    if ($groupExists and ($groupExists == EBox::Users::OBJECT_EXISTS_AND_HIDDEN_SID())) {
         throw EBox::Exceptions::External(
             __x(q{A built-in Windows group with the name '{name}' already exists. Users and groups cannot share names},
                name => $args{uid})
