@@ -1,4 +1,5 @@
 HEAD
+	+ Remove undefined warnings on users/group creation
 	+ Fix 'Cannot connect to samba LDAP' error in manage model when samba
 	  is installed but disabled
 3.2.2
